added synchonous pagination

--- a/DocSearch2.1/Views/web.config
+++ b/DocSearch2.1/Views/web.config
@@ -17,7 +17,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="DocSearch2._1" />
+        <add namespace="PagedList" />
+        <add namespace="PagedList.Mvc" />
+        <add namespace="DocSearch2._1.Models" />
+        <add namespace="DocSearch2._1.ViewModels" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
