Fixed clear bug with invalid date types returning back.  IE is fine, but still has issues in chrome.

--- a/DocSearch2.1/Views/web.config
+++ b/DocSearch2.1/Views/web.config
@@ -21,6 +21,7 @@
         <add namespace="PagedList.Mvc" />
         <add namespace="DocSearch2._1.Models" />
         <add namespace="DocSearch2._1.ViewModels" />
+        <add namespace="System.Globalization"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
