Removed glyphicons from bootstrap and included font-awesome.  Added a custom html helper for ajaxlink with font awesome ability.

--- a/DocSearch2.1/Views/web.config
+++ b/DocSearch2.1/Views/web.config
@@ -22,6 +22,7 @@
         <add namespace="DocSearch2._1.Models" />
         <add namespace="DocSearch2._1.ViewModels" />
         <add namespace="System.Globalization"/>
+        <add namespace="DocSearch2._1.CustomHelpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
