Created a MiscPublicData class and repository function to pull the data when we use the seldom used 'MORE' button

--- a/DocSearch2.1/DocSearch2.1.csproj
+++ b/DocSearch2.1/DocSearch2.1.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Repositories\IFolderRepository.cs" />
     <Compile Include="Repositories\IPublicRepository.cs" />
     <Compile Include="Repositories\PublicRepository.cs" />
+    <Compile Include="ViewModels\MiscPublicData.cs" />
     <Compile Include="ViewModels\NavBar.cs" />
     <Compile Include="ViewModels\PublicVM.cs" />
   </ItemGroup>
