Small misc doc table now inserted into table through MORE button

--- a/DocSearch2.1/DocSearch2.1.csproj
+++ b/DocSearch2.1/DocSearch2.1.csproj
@@ -287,6 +287,7 @@
     <Content Include="Views\Shared\Errors.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\PublicVM\_PublicTable.cshtml" />
+    <Content Include="Views\PublicVM\MiscData.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
