--- a/DocSearch2.1/packages.config
+++ b/DocSearch2.1/packages.config
@@ -16,5 +16,6 @@
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net452" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
