Added a temporary rerouting in DownloadAllDocuments to return a view with the publicVM data to create a legend for the mass doc download.  Should eventually refine to become an excel INSIDE the zip folder.

--- a/DocSearch2.1/DocSearch2.1.csproj
+++ b/DocSearch2.1/DocSearch2.1.csproj
@@ -288,6 +288,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\PublicVM\_PublicTable.cshtml" />
     <Content Include="Views\PublicVM\MiscData.cshtml" />
+    <Content Include="Views\Folder\DownloadAllDocuments.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
