Learned about the repository and that live WAS db doesnt hold all doc data.  Started the coding to resolve issues with this. code cleanup needed

--- a/DocSearch2.1/DocSearch2.1.csproj
+++ b/DocSearch2.1/DocSearch2.1.csproj
@@ -291,6 +291,7 @@
     <Content Include="Views\PublicVM\MiscData.cshtml" />
     <Content Include="Views\Folder\DownloadAllDocuments.cshtml" />
     <Content Include="Views\Shared\_CategoryNavBar.cshtml" />
+    <Content Include="Views\PublicVM\_FileDisplay.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
