--- a/DocSearch2.1/DocSearch2.1.csproj
+++ b/DocSearch2.1/DocSearch2.1.csproj
@@ -287,11 +287,12 @@
     <Content Include="Scripts\jquery-3.1.1.min.map" />
     <Content Include="Views\Shared\Errors.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\PublicVM\_PublicTable.cshtml" />
+    <Content Include="Views\Shared\_PublicTable.cshtml" />
     <Content Include="Views\PublicVM\MiscData.cshtml" />
     <Content Include="Views\Folder\DownloadAllDocuments.cshtml" />
     <Content Include="Views\Shared\_CategoryNavBar.cshtml" />
     <Content Include="Views\PublicVM\_FileDisplay.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -301,7 +302,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
