I think I am going a different route with admin code.  Admin Controller and its views might be expendable as I am going to write this code into the original main controller

--- a/DocSearch2.1/DocSearch2.1.csproj
+++ b/DocSearch2.1/DocSearch2.1.csproj
@@ -293,6 +293,7 @@
     <Content Include="Views\Shared\_CategoryNavBar.cshtml" />
     <Content Include="Views\PublicVM\_FileDisplay.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Shared\_Form.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
