--- a/DocSearch2.1/DocSearch2.1.csproj
+++ b/DocSearch2.1/DocSearch2.1.csproj
@@ -294,6 +294,7 @@
     <Content Include="Views\PublicVM\_FileDisplay.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Shared\_Form.cshtml" />
+    <Content Include="Views\Admin\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
