--- a/DocSearch2.1/DocSearch2.1.csproj
+++ b/DocSearch2.1/DocSearch2.1.csproj
@@ -296,7 +296,11 @@
     <Content Include="Views\Shared\_Form.cshtml" />
     <Content Include="Views\Admin\Edit.cshtml" />
     <Content Include="Views\Admin\_EditTable.cshtml" />
+    <Content Include="Views\Admin\Edit1old.cshtml" />
     <Content Include="Views\Admin\Edit1.cshtml" />
+    <Content Include="Views\Admin\EditorTemplates\PublicVMWorking.cshtml" />
+    <Content Include="Views\Admin\EditorTemplates\PublicVM.cshtml" />
+    <Content Include="Views\Admin\EditorTemplates\PublicVM6.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
