fixed small filtering bug from new date filters.  Removed most pagedList remnants (but not pagedList itself yet).

--- a/DocSearch2.1/Views/web.config
+++ b/DocSearch2.1/Views/web.config
@@ -17,8 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="PagedList" />
-        <add namespace="PagedList.Mvc" />
+        <!--<add namespace="PagedList" />
+        <add namespace="PagedList.Mvc" />-->
         <add namespace="DocSearch2._1.Models" />
         <add namespace="DocSearch2._1.ViewModels" />
         <add namespace="System.Globalization"/>
