created a extention helper for header links that refactored a good portion of code

--- a/DocSearch2.1/DocSearch2.1.csproj
+++ b/DocSearch2.1/DocSearch2.1.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PublicVMController.cs" />
     <Compile Include="CustomHelpers\CustomLink.cs" />
+    <Compile Include="CustomHelpers\CustomTableHeader.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
