Project and web.config file changed to use IIS instead of IIS Express, Ramin might have issues with opening this

--- a/DocSearch2.1/DocSearch2.1.csproj
+++ b/DocSearch2.1/DocSearch2.1.csproj
@@ -319,6 +319,8 @@
           <DevelopmentServerPort>57188</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:57188/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://localhost:57188/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
