--- a/DocSearch2.1/Web.config
+++ b/DocSearch2.1/Web.config
@@ -15,10 +15,10 @@
     <add name="WASEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIESERStag4;initial catalog=WAS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="WASEntities4" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIESERStag4;initial catalog=WAS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="WASEntities5" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=training2;initial catalog=WAS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    
+
     <!--The datasource doesnt exist-->
     <add name="WASArchiveEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LDSIT1;initial catalog=WASarchive;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    
+
     <!--PRODUCTION DATABASES-->
     <add name="WASEntitiesLIVE" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=repository;initial catalog=WAS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="WASArchiveEntitiesLIVE" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LDSIT;initial catalog=WASarchive;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -34,9 +34,31 @@
     <httpRuntime targetFramework="4.5.2" />
 
     <!--Makes it that remote users will not get detailed error pages-->
-    <customErrors mode="RemoteOnly" />
-    
+    <customErrors mode="Off" />
+    <!--<authentication mode="Windows" />-->
+    <!--ADDED BY MARTIN-->
   </system.web>
+
+  <system.webServer>
+    <!--Entire branch added by MARTIN -->
+    <staticContent>
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+      <!--Allows for font awesome sorting arrows to be brought through IIS-->
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <!--Allows for font awesome sorting arrows to be brought through IIS-->
+    </staticContent>
+    <security>
+      <authorization>
+        <remove users="*" roles="" verbs="" />
+        <add accessType="Allow" users="westlandcorp\jcheng" />
+        <add accessType="Deny" users="?" />
+        <add accessType="Allow" roles="westlandcorp\IT" />
+      </authorization>
+    </security>
+
+  </system.webServer>
+
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
