--- a/DocSearch2.1/Web.config
+++ b/DocSearch2.1/Web.config
@@ -57,6 +57,7 @@
         <!--<add accessType="Allow" roles="westlandcorp\IT" />-->
       </authorization>
     </security>
+    <!--End of Martin's Code -->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
