Errors more customized now.

--- a/DocSearch2.1/Web.config
+++ b/DocSearch2.1/Web.config
@@ -41,7 +41,10 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <!--Makes it that remote users will not get detailed error pages-->
-    <customErrors mode="RemoteOnly" /> 
+    <!--<customErrors mode="RemoteOnly" />-->
+    <customErrors mode="On" defaultRedirect="~/ErrorHandler/Index">
+      <error statusCode="404" redirect="~/ErrorHandler/NotFound"/>
+    </customErrors>
     <authentication mode="Windows" /><!--ADDED BY MARTIN-->
   </system.web>
   <system.webServer>
