--- a/DocSearch2.1/Web.config
+++ b/DocSearch2.1/Web.config
@@ -11,9 +11,9 @@
   <connectionStrings>
     
     <!--Development-->
-    <add name="WASEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=WAS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    <add name="WASEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=WAS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="WASEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIESERStag4;initial catalog=WAS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    <add name="WASEntities11" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIESERStag4;initial catalog=WAS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
 
     <add name="WASEntities7" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIESERStag6;initial catalog=WAS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
@@ -25,7 +25,7 @@
       providerName="System.Data.EntityClient" />
     
     <!--PRODUCTION-->
-    <add name="WASEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=repository;initial catalog=WAS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    <add name="WASEntitiesLIVE" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=repository;initial catalog=WAS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
     <add name="WASArchiveEntitiesLIVE" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LDSIT;initial catalog=WASarchive;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
